@@ -68,7 +68,8 @@ Ctrlproxy 3.0.2 UNRELEASED
 		AWAYLEN, MAXTARGETS, WALLCHOPS, WALLVOICES, RFC2812, PENALTY,
 		FNC, SAFELIST, USERIP, CNOTICE, KNOCK, VCHANNELS, WHOX, CALLERID,
 		ACCEPT, KEYLEN, USERLEN, HOSTLEN, MAXCHANNELLEN, 
-		MAXNICKLEN, DEAF, ELIST, MAXPARA, NAMESX, SECURELIST and SILENCE
+		MAXNICKLEN, DEAF, ELIST, MAXPARA, NAMESX, SECURELIST, WATCH
+		and SILENCE
 
 	* Default to binding to 127.0.0.1 if no IP was specified in the 
 	  listener, instead of 0.0.0.0.
